--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
             "email": "renzhifan@haohaozhu.com"
         }
     ],
+    "license": "MIT",
     "require" : {
         "php" : ">=5.6",
         "monolog/monolog" : "1.24.0",
